--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^3.14.1",
     "express": "^4.14.0",
     "node-fetch": "^1.7.3",
+    "promise": "^8.0.1",
     "pug": "^2.0.0-rc.4",
     "requirejs": "^2.3.2",
     "socket.io": "^1.7.2",
